# discord-trade-bot

./: .dockerignore  .env.dist  .env.docker  .gitignore  Dockerfile  README.Docker.md  README.md  config-test.yaml  config.yaml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini
docker/: entrypoint.sh  healthcheck.sh
src/discord_trade_bot/core/application/signal/: dto.py
src/discord_trade_bot/core/application/trading/: dto.py  interfaces.py
src/discord_trade_bot/core/domain/entities/: pending_entry.py  position.py  signal.py  trade_state.py
src/discord_trade_bot/core/domain/services/: parser.py  (+4 more)
src/discord_trade_bot/infrastructure/discord/: client.py
src/discord_trade_bot/infrastructure/exchanges/: base.py  binance.py  bybit.py  composite.py
src/discord_trade_bot/infrastructure/notifications/: telegram.py
src/discord_trade_bot/infrastructure/persistence/: repository.py
src/discord_trade_bot/infrastructure/taskiq/: broker.py  events.py  tasks.py
src/discord_trade_bot/main/: bootstrap.py
src/discord_trade_bot/main/config/: app.py  logging.py
src/discord_trade_bot/main/di/: __init__.py  setup.py
src/discord_trade_bot/main/runners/: discord.py  tracker.py
src/discord_trade_bot/presentation/cli/: main.py
tests/: conftest.py
tests/application/: test_position_opening.py  test_position_tracking.py  test_signal_processing.py
tests/domain/: test_entities.py  test_entry_order_decider.py  test_formatters.py  test_parser.py  test_tp_calculator.py  test_trading_calculations.py
tests/infrastructure/: __init__.py  test_discord_adapter.py  test_repository.py  test_telegram_adapter.py
tests/utils/: test_datetime_utils.py  test_parsing_utils.py  test_text_utils.py
(+33 files in other folders)
