[project]
name = "discord-trade-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "uzrama", email = "mark.uzun7@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.26.0",
    "aiosqlite>=0.22.1",
    "coloredlogs>=15.0.1",
    "discord-py-self>=2.1.0",
    "dishka>=1.9.1",
    "httpx>=0.28.1",
    "orjson>=3.11.7",
    "pybit>=5.14.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-binance>=1.0.35",
    "pyyaml>=6.0.3",
    "redis>=7.3.0",
    "taskiq-redis>=1.2.2",
    "taskiq[msgpack]>=0.12.1",
    "typer>=0.24.1",
    "websockets>=16.0",
]

[project.scripts]
discord-trade-bot = "discord_trade_bot.presentation.cli.main:app"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 180

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "PL", "RUF"]   # or "ALL"
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.basedpyright]
reportUnusedCallResult = false
reportAny = false
reportExplicitAny = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportMissingTypeStubs = false
reportUnreachable = false
reportUntypedFunctionDecorator = false
reportUntypedBaseClass = false
ignore = [
    "tests",
    "migrations",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "faker>=33.1.0",
    "freezegun>=1.5.1",
]
